# plutobook-wasm

./: BUILDING_WASM.md  CLAUDE.md  app.html  gradients.html  html2pdf.js  index.html  meson.build  multi_bg_aspect.html  render_wasm_pdf.js
.cache/clangd/index/: argparser.cpp.451906BB7526E0DC.idx  argparser.h.A26FD575253A4C13.idx  blockbox.cpp.830F641B40FA7327.idx  blockbox.h.9D7CD2A2A1D56F4B.idx  borderpainter.cpp.385E20E1B86486AA.idx  borderpainter.h.2EA9B6C50EEDBCEC.idx  box.cpp.F29D25FDCEE2DE3F.idx  box.h.80B1597C732B5424.idx  boxlayer.cpp.9E84F29E66B5D6ED.idx  boxlayer.h.D662E241122BF04C.idx  boxstyle.cpp.01E6BFEDA21A5AAA.idx  boxstyle.h.B6AC88E98BFDC056.idx  boxview.cpp.193BF7F033F85491.idx  boxview.h.D7837B1E7D1446D9.idx  color.cpp.2CA45E9EDDD01572.idx  color.h.8D4763DC5D39D196.idx  contentbox.cpp.C2DD60F1A771F4FE.idx  contentbox.h.4802CD678DFADDD6.idx  counters.cpp.2F86E2F9932A84AB.idx  counters.h.AABA77E71FBBF7A6.idx  cssparser.cpp.1F9B722F7DBBDD67.idx  cssparser.h.EAC1AD7EF14AA13D.idx  cssrule.cpp.101C58AEF7518B4D.idx  cssrule.h.0B2EB8CCF927C3FE.idx  cssstylesheet.cpp.4235F4E7463B2535.idx  cssstylesheet.h.9E0DE821B4D7C482.idx  csstokenizer.cpp.9CF653239871B80E.idx  csstokenizer.h.70F954FE45AE24C9.idx  document.cpp.3624B86863D9D250.idx  document.h.1AA008D3FDE5C2AE.idx  (+90 more)
cross/: emscripten.ini  native.ini
source/: cssparser.cpp  cssparser.h  cssrule.h
source/layout/: blockbox.cpp  box.cpp  boxstyle.cpp  boxstyle.h
subprojects/: libpng.wrap  pixman.wrap  zlib.wrap
wasm/: build.sh  filter_icu_data.py  meson.build  plutobook.js  plutobook_wasm.c  test.html
wasm/fonts/: fonts.conf
